--- a/templates/pybin/paste.html
+++ b/templates/pybin/paste.html
@@ -1,38 +1,91 @@
 {% extends "base.html" %}
 {% block content %}
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
-    {% endwith %}
-    <a href="/raw/{{ paste.paste_hash }}" class="btn btn-info" type="submit">raw</a>
-    {% if current_user == paste.author %}
-        <a href="/delete/{{ paste.paste_hash }}"
-           class="btn btn-danger"
-           type="submit">delete</a>
-    {% endif %}
-    {% if current_user == paste.author %}
-        <a href="/edit/{{ paste.paste_hash }}"
-           class="btn btn-success"
-           type="submit">edit</a>
-    {% endif %}
-    <div>{{ paste.title }}</div>
-    <div>
-        author
-        {{ paste.author.username }}
-    </div>
-    <div>
-        date created
-        {{ paste.created.strftime("%b %d, %Y")}}
-    </div>
-    <div>
-        <pre><code>{{paste.content}}</code></pre>
-    </div>
-    <div>
-        content
-        <textarea>{{paste.content}}</textarea>
-    </div>
-    <div>
-        number of comments
-        {{ paste.comments|length }}
+    <div class="container">
+        <div class="row">
+            <div class="errors">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
+                {% endwith %}
+            </div>
+            <div class="content col">
+                <a href="/raw/{{ paste.paste_hash }}" class="btn btn-info" type="submit">raw</a>
+                {% if current_user == paste.author %}
+                    <a href="/delete/{{ paste.paste_hash }}"
+                       class="btn btn-danger"
+                       type="submit">delete</a>
+                {% endif %}
+                {% if current_user == paste.author %}
+                    <a href="/edit/{{ paste.paste_hash }}"
+                       class="btn btn-success"
+                       type="submit">edit</a>
+                {% endif %}
+                <div>{{ paste.title }}</div>
+                <div>
+                    author
+                    {{ paste.author.username }}
+                </div>
+                <div>
+                    date created
+                    {{ paste.created.strftime("%b %d, %Y")}}
+                </div>
+                <div>
+                    <pre><code>{{paste.content}}</code></pre>
+                </div>
+                <div>
+                    content
+                    <textarea>{{paste.content}}</textarea>
+                </div>
+                <div>
+                    number of comments
+                    {{ paste.comments|length }}
+                </div>
+            </div>
+            <div class="sidebar col-sm-3">
+                <div class="sidebar_title">
+                    <a href="#">My Pastes</a>
+                </div>
+                <ul class="sidebar_menu">
+                    {% for paste in my_pastes() %}
+                        <li>
+                            {% if paste.paste_exposure == "Public" %}
+                                <i class="fa fa-globe" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Unlisted' %}
+                                <i class="fa fa-link" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Private' %}
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            {% endif %}
+                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                            <div class="details">
+                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="sidebar_sticky"></div>
+                <div class="sidebar_title">
+                    <a href="#">Public Pastes</a>
+                </div>
+                <ul class="sidebar_menu">
+                    {% for paste in public_pastes() %}
+                        <li>
+                            {% if paste.paste_exposure == "Public" %}
+                                <i class="fa fa-globe" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Unlisted' %}
+                                <i class="fa fa-link" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Private' %}
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            {% endif %}
+                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                            <div class="details">
+                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
 {% endblock %}
 {% block scripts %}
