--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -1,41 +1,97 @@
 {% extends "base.html" %}
 {% block content %}
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
-    {% endwith %}
-    <form method="POST" action="/user/profile/">
-        {{ form.csrf_token }}
-        <div>
-            Username:
-            {{ current_user.username }}
+    <div class="container">
+        <div class="row">
+            <div class="errors">
+                {% if form.website_url.errors %}
+                    {% for error in form.content.errors %}{{ error }}{% endfor %}
+                {% endif %}
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
+                {% endwith %}
+            </div>
+            <div class="content col">
+                <form method="POST" action="/user/profile/">
+                    {{ form.csrf_token }}
+                    <div>
+                        Username:
+                        {{ current_user.username }}
+                    </div>
+                    <div>
+                        {{ form.email.label }}
+                        {{ form.email }}
+                    </div>
+                    <div>
+                        Email Status:
+                        {% if current_user.email_status %}
+                            verified!
+                        {% else %}
+                            <!-- TODO: Implement Email Verification -->
+                            not verified! We have sent you an email [ <a href="#">resend verification email</a>]
+                        {% endif %}
+                    </div>
+                    <div>
+                        {{ form.website_url.label }}
+                        {{ form.website_url }}
+                    </div>
+                    <div>
+                        {{ form.location.label }}
+                        {{ form.location }}
+                    </div>
+                    <div>
+                        Avatar:
+                        <img src="{{ profile_image()}}">
+                        <!-- TODO: Make a change-avatar route -->
+                        [ <a href="/user/change-avatar/">change avatar</a> ]
+                    </div>
+                    {{ form.submit }}
+                </form>
+            </div>
+            <div class="sidebar col-sm-3">
+                <div class="sidebar_title">
+                    <a href="#">My Pastes</a>
+                </div>
+                <ul class="sidebar_menu">
+                    {% for paste in my_pastes() %}
+                        <li>
+                            {% if paste.paste_exposure == "Public" %}
+                                <i class="fa fa-globe" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Unlisted' %}
+                                <i class="fa fa-link" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Private' %}
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            {% endif %}
+                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                            <div class="details">
+                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="sidebar_sticky"></div>
+                <div class="sidebar_title">
+                    <a href="#">Public Pastes</a>
+                </div>
+                <ul class="sidebar_menu">
+                    {% for paste in public_pastes() %}
+                        <li>
+                            {% if paste.paste_exposure == "Public" %}
+                                <i class="fa fa-globe" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Unlisted' %}
+                                <i class="fa fa-link" aria-hidden="true"></i>
+                            {% elif paste.paste_exposure == 'Private' %}
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            {% endif %}
+                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                            <div class="details">
+                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-        <div>
-            {{ form.email.label }}
-            {{ form.email }}
-        </div>
-        <div>
-            Email Status:
-            {% if current_user.email_status %}
-                verified!
-            {% else %}
-                <!-- TODO: Implement Email Verification -->
-                not verified! We have sent you an email [ <a href="#">resend verification email</a>]
-            {% endif %}
-        </div>
-        <div>
-            {{ form.website_url.label }}
-            {{ form.website_url }}
-        </div>
-        <div>
-            {{ form.location.label }}
-            {{ form.location }}
-        </div>
-        <div>
-            Avatar:
-            <img src="{{ profile_image()}}">
-            <!-- TODO: Make a change-avatar route -->
-            [ <a href="/user/change-avatar/">change avatar</a> ]
-        </div>
-        {{ form.submit }}
-    </form>
+    </div>
 {% endblock %}
