added link to change password in navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,7 +54,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/user/password/">
                                     <i class="fa fa-key" aria-hidden="true"></i>
                                     CHANGE PASSWORD
                                 </a>
