--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -15,12 +15,16 @@
                     {{ form.csrf_token }}
                     <div>
                         Password Status:
-                        {% if current_user.password_hash %}<p class="password_set">Ok!</p>{% else %}<p class="password_not_set">Not set!</p>{% endif %}
+                        {% if current_user.password_hash %}
+                            <p class="password_set">Ok!</p>
+                        {% else %}
+                            <p class="password_not_set">Not set!</p>
+                        {% endif %}
                     </div>
                     {% if current_user.password_hash %}
                         <div>
-                            {{form.current_password.label}} 
-                            {{form.current_password(placeholder="Your current password")}} 
+                            {{ form.current_password.label }}
+                            {{ form.current_password(placeholder="Your current password")}}
                         </div>
                     {% endif %}
                     <div>
@@ -40,6 +44,11 @@
                     <a href="#">My Pastes</a>
                 </div>
                 <ul class="sidebar_menu">
+                    {% if not my_pastes() %}
+                        <li>
+                            <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
+                        </li>
+                    {% endif %}
                     {% for paste in my_pastes() %}
                         <li>
                             {% if paste.paste_exposure == "Public" %}
@@ -83,4 +92,3 @@
         </div>
     </div>
 {% endblock %}
-
