--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -52,6 +52,11 @@
                     <a href="#">My Pastes</a>
                 </div>
                 <ul class="sidebar_menu">
+                    {% if not my_pastes() %}
+                        <li>
+                            <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
+                        </li>
+                    {% endif %}
                     {% for paste in my_pastes() %}
                         <li>
                             {% if paste.paste_exposure == "Public" %}
