added my_comments route

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,7 +36,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/u/{{current_user.username}}/comments/">
                                     <i class="fa fa-comments" aria-hidden="true"></i>
                                     MY COMMENTS
                                 </a>
