--- a/templates/pybin/my_pybin.html
+++ b/templates/pybin/my_pybin.html
@@ -22,27 +22,27 @@
                         {% for paste in pastes %}
                             <tr>
                                 <td>
-                                    {% if paste.paste_exposure == "Public" %}
+                                    {% if paste.exposure == "Public" %}
                                         <i class="fa fa-globe" aria-hidden="true"></i>
-                                    {% elif paste.paste_exposure == 'Unlisted' %}
+                                    {% elif paste.exposure == 'Unlisted' %}
                                         <i class="fa fa-link" aria-hidden="true"></i>
-                                    {% elif paste.paste_exposure == 'Private' %}
+                                    {% elif paste.exposure == 'Private' %}
                                         <i class="fa fa-lock" aria-hidden="true"></i>
                                     {% endif %}
-                                    <a href="/{{ paste.paste_hash }}">{{ paste.title }}</a>
+                                    <a href="/{{ paste.uuid_hash }}">{{ paste.title }}</a>
                                 </td>
                                 <td>{{ paste.created.strftime("%b %d, %Y")}}</td>
-                                <td>{{ paste.paste_expiration }}</td>
+                                <td>{{ paste.expiration }}</td>
                                 <td>{{ paste.comments|length }}</td>
                                 <td>{{ paste.syntax }}</td>
                                 {% if current_user == paste.author %}
                                     <td>
-                                        <a href="/delete/{{ paste.paste_hash }}"
+                                        <a href="/delete/{{ paste.uuid_hash }}"
                                            class="btn btn-danger"
                                            type="submit">delete</a>
                                     </td>
                                     <td>
-                                        <a href="/edit/{{ paste.paste_hash }}"
+                                        <a href="/edit/{{ paste.uuid_hash }}"
                                            class="btn btn-success"
                                            type="submit">edit</a>
                                     </td>
@@ -64,17 +64,17 @@
                     {% endif %}
                     {% for paste in my_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
@@ -86,17 +86,17 @@
                 <ul class="sidebar_menu">
                     {% for paste in public_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
