--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -41,7 +41,6 @@
                     <div>
                         Avatar:
                         <img src="{{ profile_image()}}">
-                        <!-- TODO: Make a change-avatar route -->
                         [ <a href="/user/change-avatar/">change avatar</a> ]
                     </div>
                     {{ form.submit }}
@@ -59,17 +58,17 @@
                     {% endif %}
                     {% for paste in my_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
@@ -81,17 +80,17 @@
                 <ul class="sidebar_menu">
                     {% for paste in public_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
