--- a/templates/pybin/paste.html
+++ b/templates/pybin/paste.html
@@ -8,14 +8,14 @@
                 {% endwith %}
             </div>
             <div class="content col">
-                <a href="/raw/{{ paste.paste_hash }}" class="btn btn-info" type="submit">raw</a>
+                <a href="/raw/{{ paste.uuid_hash }}" class="btn btn-info" type="submit">raw</a>
                 {% if current_user == paste.author %}
-                    <a href="/delete/{{ paste.paste_hash }}"
+                    <a href="/delete/{{ paste.uuid_hash }}"
                        class="btn btn-danger"
                        type="submit">delete</a>
                 {% endif %}
                 {% if current_user == paste.author %}
-                    <a href="/edit/{{ paste.paste_hash }}"
+                    <a href="/edit/{{ paste.uuid_hash }}"
                        class="btn btn-success"
                        type="submit">edit</a>
                 {% endif %}
@@ -52,17 +52,17 @@
                     {% endif %}
                     {% for paste in my_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
@@ -74,17 +74,17 @@
                 <ul class="sidebar_menu">
                     {% for paste in public_pastes() %}
                         <li>
-                            {% if paste.paste_exposure == "Public" %}
+                            {% if paste.exposure == "Public" %}
                                 <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Unlisted' %}
+                            {% elif paste.exposure == 'Unlisted' %}
                                 <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.paste_exposure == 'Private' %}
+                            {% elif paste.exposure == 'Private' %}
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
                                 {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.paste_size }} KB
+                                {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
                     {% endfor %}
