--- a/templates/pybin/document.html
+++ b/templates/pybin/document.html
@@ -65,8 +65,35 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="highlighted-code">
-                                            <pre><code>{{comment.content}}</code></pre>
+                                        <div id="{{comment.id}}"class="highlighted-code">
+                                            <div class="top-buttons d-flex">
+                                                <div class="left d-inline-flex">
+                                                    <a class="btn btn-outline-secondary" href="/{{document.id}}/#{{comment.id}}/">#</a>
+
+                                                    <!-- TODO: Implement Search by Document Syntax -->
+                                                    <a class="btn btn-outline-secondary" href="#">{% if comment.syntax != "None" %}{{comment.syntax}}{% else %}text{% endif %}</a>
+                                                    {{comment.size}} | 
+                                                    <!-- TODO: Implement Document Rating -->
+                                                    <a class="btn btn-outline-secondary"><i class="fa fa-thumbs-up" aria-hidden="true"></i> 0</a>
+                                                    <a class="btn btn-outline-secondary"><i class="fa fa-thumbs-down" aria-hidden="true"></i> 0</a>
+                                                </div>
+                                                <div class="right ms-auto d-inline-flex">
+                                                    <a class="btn btn-outline-secondary" href="/{{comment.id}}/">view</a>
+                                                    {% if current_user == comment.author %}
+                                                        <a class="btn btn-outline-secondary" href="/edit/{{comment.id}}/">edit</a>
+                                                    {% endif %}
+                                                    {% if current_user == comment.author %}
+                                                        <a class="btn btn-outline-secondary" href="/delete/{{comment.id}}/">delete</a>
+                                                    {% else %}
+                                                        <!-- TODO: Implement Document Reports -->
+                                                        <a class="btn btn-outline-secondary" href="#">report</a>
+                                                    {% endif %}
+                                                    <a class="btn btn-outline-secondary" href="#">reply</a>
+                                                </div>
+                                            </div>
+                                            <div class="source">
+                                                <pre><code>{{comment.content}}</code></pre>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
